// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.server.v1;

message NodeDesc {
  uint64 id = 1;
  string addr = 2;
  NodeCapacity capacity = 3;
}

message NodeCapacity {
  double cpu_nums = 1;
  uint64 replica_count = 2;
  uint64 leader_count = 3;
}

message ShardDesc {
  uint64 id = 1;
  uint64 collection_id = 2;

  message HashPartition {
    // TODO: hash function
    uint64 slot = 1;
  }

  message RangePartition {
    bytes start = 1;
    bytes end = 2;
  }

  oneof partition {
    HashPartition hash = 3;
    RangePartition range = 4;
  }
}

message GroupDesc {
  uint64 id = 1;
  /// The version stamp of `GroupDesc`, increment when `shards` or `replicas`
  /// changes. Used to quickly detect if `GroupDesc` has changed.
  uint64 epoch = 2;
  repeated ShardDesc shards = 3;
  repeated ReplicaDesc replicas = 4;
}

enum ReplicaRole {
  VOTER = 0;
  LEARNER = 1;
  INCOMING_VOTER = 2;
  DEMOTING_VOTER = 3;
}

message ReplicaDesc {
  uint64 id = 1;
  uint64 node_id = 2;
  ReplicaRole role = 3;
}

/// The volatile state of a group.
message GroupState {
  uint64 group_id = 1;
  optional uint64 leader_id = 2;
  repeated ReplicaState replicas = 3;
}

/// The volatile state of a replica. Reports to root when the state of each
/// replica changes.
message ReplicaState {
  uint64 replica_id = 1;
  uint64 group_id = 2;
  uint64 term = 3;
  uint64 voted_for = 4;
  RaftRole role = 5;
}

enum RaftRole {
  FOLLOWER = 0;
  CANDIDATE = 1;
  LEADER = 2;
  PRE_CANDIDATE = 3;
}
